name: haggle
version: 0.1.0.0
synopsis: A Haskell graph library offering mutable and immutable graphs
description: This graph library provides both mutable and immutable graphs.
             Graphs are constructed in IO or ST via mutation and then
             /frozen/ into immutable graphs.

             Algorithms (for the most part) work over immutable graphs.

             This differs from FGL, which has only inductive graphs.  Those
             graphs offer an immutable API where a new graph is constructed
             when nodes are added or removed.  The approach taken in this
             library allows for much more compact graphs than are possible
             while supporting the FGL API.
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: tristan@nochair.net
category: Data
build-type: Simple
cabal-version: >=1.10
tested-with: GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Data.Graph.Haggle,
                   Data.Graph.Haggle.BiDigraph,
                   Data.Graph.Haggle.Classes,
                   Data.Graph.Haggle.Digraph,
                   Data.Graph.Haggle.SimpleBiDigraph,
                   Data.Graph.Haggle.PatriciaTree,
                   Data.Graph.Haggle.LabelAdapter,
                   Data.Graph.Haggle.VertexLabelAdapter,
                   Data.Graph.Haggle.EdgeLabelAdapter,
                   Data.Graph.Haggle.VertexMap,
                   Data.Graph.Haggle.Algorithms.DFS,
                   Data.Graph.Haggle.Algorithms.Dominators,
                   Data.Graph.Haggle.Internal.Basic,
                   Data.Graph.Haggle.Internal.BitSet
  other-modules: Data.Graph.Haggle.Internal.Adapter
  build-depends: base >= 4.5 && < 5,
                 ref-tf >= 0.4 && < 0.5,
                 vector >= 0.9 && < 0.12,
                 primitive >= 0.4 && < 0.7,
                 containers >= 0.4,
                 hashable < 1.3,
                 deepseq >= 1 && < 2,
                 monad-primitive

test-suite GraphTests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: GraphTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  build-depends: haggle == 0.1.0.0,
                 base >= 4.5,
                 containers,
                 fgl,
                 HUnit,
                 QuickCheck > 2.4,
                 test-framework,
                 test-framework-hunit,
                 test-framework-quickcheck2

source-repository head
  type: git
  location: https://github.com/travitch/haggle
