name: haggle
version: 0.1.0.0
synopsis: A graph library offering mutable, immutable, and inductive graphs
description: This library provides mutable (in ST or IO), immutable, and inductive graphs.
             There are multiple graphs implementations provided to support different use
             cases and time/space tradeoffs.  It is a design goal of haggle to be flexible
             and allow users to "pay as they go".  Node and edge labels are optional.  Haggle
             also aims to be safer than fgl: there are no partial functions in the API.

license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: tristan@ravit.ch
category: Data Structures, Graphs
build-type: Simple
cabal-version: >=1.10
tested-with: GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.1
extra-source-files: ChangeLog

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  if impl(ghc > 8)
     ghc-options: -Wno-compat
  exposed-modules: Data.Graph.Haggle,
                   Data.Graph.Haggle.BiDigraph,
                   Data.Graph.Haggle.Classes,
                   Data.Graph.Haggle.Digraph,
                   Data.Graph.Haggle.SimpleBiDigraph,
                   Data.Graph.Haggle.PatriciaTree,
                   Data.Graph.Haggle.LabelAdapter,
                   Data.Graph.Haggle.VertexLabelAdapter,
                   Data.Graph.Haggle.EdgeLabelAdapter,
                   Data.Graph.Haggle.VertexMap,
                   Data.Graph.Haggle.Algorithms.DFS,
                   Data.Graph.Haggle.Algorithms.Dominators
  other-modules: Data.Graph.Haggle.Internal.Adapter,
                 Data.Graph.Haggle.Internal.Basic,
                 Data.Graph.Haggle.Internal.BitSet
  build-depends: base >= 4.5 && < 5,
                 ref-tf >= 0.4 && < 0.5,
                 vector >= 0.9 && < 0.13,
                 primitive >= 0.4 && < 0.9,
                 containers >= 0.4,
                 hashable < 1.4,
                 deepseq >= 1 && < 2,
                 monad-primitive

test-suite GraphTests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: GraphTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  build-depends: haggle,
                 base >= 4.5,
                 containers,
                 fgl,
                 HUnit,
                 QuickCheck > 2.4,
                 test-framework,
                 test-framework-hunit,
                 test-framework-quickcheck2

source-repository head
  type: git
  location: https://github.com/travitch/haggle
