name: haggle
version: 0.2
synopsis: A graph library offering mutable, immutable, and inductive graphs
description: This library provides mutable (in ST or IO), immutable, and inductive graphs.
             There are multiple graphs implementations provided to support different use
             cases and time/space tradeoffs.  It is a design goal of haggle to be flexible
             and allow users to "pay as they go".  Node and edge labels are optional.  Haggle
             also aims to be safer than fgl: there are no partial functions in the API.

homepage:            https://github.com/travitch/haggle
bug-reports:         https://github.com/travitch/haggle/issues
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: tristan@ravit.ch
category: Data Structures, Graphs
build-type: Simple
cabal-version: >=1.10
tested-with: GHC ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-source-files: ChangeLog.md
                    README.md

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  if impl(ghc > 8)
     ghc-options: -Wcompat
  exposed-modules: Data.Graph.Haggle,
                   Data.Graph.Haggle.BiDigraph,
                   Data.Graph.Haggle.Classes,
                   Data.Graph.Haggle.Digraph,
                   Data.Graph.Haggle.SimpleBiDigraph,
                   Data.Graph.Haggle.PatriciaTree,
                   Data.Graph.Haggle.LabelAdapter,
                   Data.Graph.Haggle.VertexLabelAdapter,
                   Data.Graph.Haggle.EdgeLabelAdapter,
                   Data.Graph.Haggle.VertexMap,
                   Data.Graph.Haggle.Algorithms.DFS,
                   Data.Graph.Haggle.Algorithms.Dominators
  other-modules: Data.Graph.Haggle.Internal.Adapter,
                 Data.Graph.Haggle.Internal.Basic,
                 Data.Graph.Haggle.Internal.BitSet
  build-depends: base >= 4.5 && < 5,
                 ref-tf >= 0.4 && < 0.6,
                 vector >= 0.9 && < 0.13,
                 vector-th-unbox >= 0.2.1.3 && < 0.3,
                 primitive >= 0.4 && < 0.9,
                 containers >= 0.4,
                 hashable >= 1.2 && < 1.5,
                 deepseq >= 1 && < 2,
                 monad-primitive < 0.2

test-suite GraphTests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: GraphTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  build-depends: haggle,
                 base >= 4.5,
                 containers,
                 fgl,
                 HUnit,
                 QuickCheck > 2.4,
                 test-framework,
                 test-framework-hunit,
                 test-framework-quickcheck2

source-repository head
  type: git
  location: https://github.com/travitch/haggle
